# stupass-backend

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
.serena/: project.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260215_000001_init_auth_schema.rs  m20260224_000002_init_stupass_schema.rs  m20260301_000003_unique_credential_per_provider.rs
seeder/: Cargo.toml
seeder/src/: auth_provider.rs  credential.rs  lib.rs  main.rs  user.rs
src/: config.rs  errors.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  state.rs
src/entities/: auth_provider.rs  category.rs  city.rs  condition.rs  credential.rs  district.rs  listing.rs  mod.rs  password_reset_token.rs  prelude.rs  report.rs  review.rs  session.rs  user.rs  ward.rs
src/extractors/: validation.rs
src/handlers/: auth.rs  general.rs
src/middleware/: auth_middleware.rs
src/models/: auth.rs  mod.rs  user.rs
src/repositories/: errors.rs
src/repositories/auth/: credential.rs  mod.rs  user.rs
src/services/: email.rs  mod.rs
src/services/auth/: login.rs  mod.rs  password.rs  register.rs  service.rs  session.rs
src/util/: mod.rs  send_password_reset_email.rs  send_verification_email.rs
src/utils/: jwt_token.rs
tests/: auth_forgot_password.rs  auth_login.rs  auth_logout.rs  auth_refresh.rs  auth_register.rs  auth_reset_password.rs  auth_verify_email.rs  health.rs
tests/common/: db.rs  fixtures.rs  mock_email.rs  mod.rs  request.rs
