[package]
name = "stupass-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "seeder"]
default-members = [".", "migration"]

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
console-subscriber = "0.5.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "runtime-tokio-native-tls",
] }
migration = { path = "migration" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
http = "1.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "config"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["fast-rng", "v4", "serde"] }
chrono = "0.4.43"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.9"
base64 = "0.22.1"
sha2 = "0.10.9"
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
