[package]
name = "seeder"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
stupass-backend = { path = ".." }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.49.0", features = ["full"] }
fake = { version = "4.4.0", features = ["derive", "uuid"] }
uuid = "1.21.0"
chrono = "0.4.43"
anyhow = "1.0.101"
rand = "0.10.0"
clap = { version = "4.5.37", features = ["derive"] }
dialoguer = "0.12.0"
