[package]
name = "seeder"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
stupass-backend = { path = ".." }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.21.0"
chrono = "0.4.43"
anyhow = "1.0.101"
clap = { version = "4.5.37", features = ["derive"] }
dialoguer = "0.12.0"
argon2 = { version = "0.5.3", features = ["std"] }
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fake = { version = "4.4.0", features = ["derive", "uuid"] }
